# raise-cut-root-cutsel-repro

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
data/manifests/: dev_manifest.csv  external_unseen_dev120_manifest.csv  external_unseen_holdout120_v2_manifest.csv  external_unseen_test140_resource_matched_valid_manifest.csv  pilot_manifest.csv  test_manifest.csv
data/work/: external_unseen_confirmatory140_resource_matched_v1_raise_portfolio_rc_route_stats.csv  external_unseen_confirmatory140_resource_matched_v1_raise_portfolio_rc_stats_paired_stats.csv  external_unseen_confirmatory140_resource_matched_v1_raise_portfolio_route_stats.csv  external_unseen_confirmatory140_resource_matched_v1_raise_portfolio_stats_paired_stats.csv  external_unseen_dev120_raise_portfolio_ud_rule_search.csv  external_unseen_dev120_raise_portfolio_ud_v1_route_stats.csv  external_unseen_dev120_raise_portfolio_ud_v1_routed_cases.csv  external_unseen_dev120_raise_portfolio_ud_v1_stats_paired_stats.csv  (+9 more)
docs/: availability-statements.md  release-v0.1.0.md
scripts/: analyze_root_cutsel_stats.py  build_external_unseen_miplib_manifest.py  build_miplib_manifest.py  combine_results_jsonl.py  create_deterministic_splits.py  export_routed_cases.py  generate_manuscript_assets.py  probe_mip_instance.py  rebuild_analysis_artifacts.py  run_root_cutsel_experiment.py  sanitize_release_artifacts.py  search_raise_portfolio_ud_rules.py  summarize_portfolio_routes.py  summarize_root_cutsel_results.py
tests/: test_qaoa_backend.py  test_scip_cutsel_utils.py  test_selectors.py
(+38 files in other folders)
